Remove meta CSP frame-ancestors
frame-ancestors in meta CSP is not supported and generates a warning.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang=en>
 <meta charset=utf-8>
-<meta http-equiv="Content-Security-Policy" content="base-uri 'self' *.internet.nl internet.nl; frame-ancestors 'none'; default-src 'self' *.internet.nl internet.nl; form-action 'self' *.internet.nl internet.nl" />
+<meta http-equiv="Content-Security-Policy" content="base-uri 'self' *.internet.nl internet.nl; default-src 'self' *.internet.nl internet.nl; form-action 'self' *.internet.nl internet.nl" />
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel="shortcut icon" href="data:,">
 <title>Test for modern internet standards [GH1045 JS post hash]</title>
